package com.example.society.Activity;

import androidx.appcompat.app.AppCompatActivity;

import android.os.Bundle;

import com.example.society.R;

public class LtActivity extends AppCompatActivity {

    @Override
    protected void onCreate(Bundle savedInstanceState) {
        super.onCreate(savedInstanceState);
        setContentView(R.layout.activity_lt);
    }
}