package com.example.society.Bean;

public class CourseBean {
    public int id;
    public String imgTitle;
    public String title;
    public String intro;
    public String icon;
}